--- a/gestao-de-viagens/angular.json
+++ b/gestao-de-viagens/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "b4367622-94d3-4b2e-a358-2dcef054d62d"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
