--- a/gestao-de-viagens/package.json
+++ b/gestao-de-viagens/package.json
@@ -29,6 +29,7 @@
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
+    "@vercel/speed-insights": "^1.1.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
